# notes_app

./: .env.example  .gitignore  README.md
backend/: constant.py  database.py  dependencies.py  main.py  pyproject.toml  settings.py
backend/models/: base.py  note.py  user.py
backend/routes/: __init__.py  auth.py  note.py  user.py
backend/schemas/: __init__.py  note.py  user.py
frontend/notes-app/: package-lock.json  package.json
frontend/notes-app/src/: App.jsx  main.jsx
frontend/notes-app/src/api/: auth.js  note.js
frontend/notes-app/src/components/: Card.jsx  Form.jsx  Navbar.jsx
frontend/notes-app/src/pages/: Home.jsx  Login.jsx  SignUp.jsx
frontend/notes-app/src/stores/: store.js
frontend/notes-app/src/stores/slicers/: note.js
