[tool.poetry]
name = "notes app"
version = "0.1.0"
description = ""
authors = ["Tariq Jamal A <tariqjamal4267324@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
beanie = "^1.28.0"
motor = "^3.6.0"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
