[tool.poetry]
name = "notes app"
version = "0.1.0"
description = ""
authors = ["Tariq Jamal A <tariqjamal4267324@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
beanie = "^1.28.0"
motor = "^3.6.0"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
pydantic-settings = "^2.7.1"
pytz = "^2024.2"
fastapi-jwt = "^0.3.0"
authlib = "^1.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
docformatter = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
wrap-summaries = 99
wrap-descriptions = 99
